Fix input width on Firefox

--- a/src/styles.css
+++ b/src/styles.css
@@ -94,7 +94,8 @@ button:disabled {
 }
 
 input.form-control {
-  width: -webkit-fill-available;
+  box-sizing: border-box;
+  width: 100%;
 }
 
 .error-message {
